# mamri-pose-estimation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ui.xml
Mamri/: CMakeLists.txt  Mamri.py
Mamri/Resources/Robot/: Baseplate.STL  Baseplate_collision.STL  End.STL  End_collision.STL  Joint1.STL  Joint1_collision.STL  Joint2.STL  Joint2_collision.STL  Joint3.STL  Joint3_collision.STL  Joint4.STL  Joint5.STL  Joint5_collision.STL  Needle_collision.stl  robot_config.json
Mamri/Resources/UI/: Mamri.ui
